<resources>
    <string name="app_name">bankrespublika</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_unexpected">Error.</string>
    <string name="close">Close</string>
    <string name="unknown_error_title">An error occurred</string>
    <string name="unknown_error_text">An unexpected error occurred.</string>
    <string name="no_internet_title">There is no internet network</string>
    <string name="no_internet_error_text">Your device has no or very weak internet connection</string>
    <string name="convert">CONVERT</string>
    <string name="result">Result</string>
    <string name="enter_value">Enter a value</string>
    <string name="clear">Clear</string>
    <string name="flag">Flag</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="fife">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>


</resources>